Update Jenkinsfile for improved CI/CD pipeline
Refactor Jenkins pipeline to include stages for building, testing, and deploying a Docker image.

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,27 +1,53 @@
 pipeline {
     agent any
-    options {
-        skipStagesAfterUnstable()
+
+    tools {
+        jdk 'Java'
+        maven 'M2_HOME'
     }
+
     stages {
-        stage('Build') {
+
+        stage('Checkout Code') {
             steps {
-                sh 'mvn -B -DskipTests clean package'
+                git branch: 'master',
+                git 'https://github.com/Hari25SHP/simple-java-maven-app.git'
             }
         }
-        stage('Test') {
+
+        stage('Build with Maven') {
             steps {
-                sh 'mvn test'
-            }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
+                sh 'mvn clean package'
             }
         }
-        stage('Deliver') { 
+
+        stage('Upload Artifact to Nexus') {
             steps {
-                sh './jenkins/scripts/deliver.sh' 
+                sh 'mvn deploy'
+            }
+        }
+
+        stage('Build Docker Image') {
+            steps {
+                sh 'docker build -t hari8382/simple-website:latest .'
+            }
+        }
+
+        stage('Push Image to Docker Hub') {
+            steps {
+                sh 'docker push 8382/simple-website:latest'
+            }
+        }
+
+        stage('Deploy to Tomcat (8082)') {
+            steps {
+                sh '''
+                docker rm -f simple-website || true
+                docker run -d \
+                  --name simple-website \
+                  -p 8082:8080 \
+                 hari8382/simple-website:latest
+                '''
             }
         }
     }
