--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <version>2.0-</version>
   <name>my-app</name>
   <url>https://maven.apache.org</url>
